--- a/control
+++ b/control
@@ -6,9 +6,10 @@ Uploaders: Richard Levitte <richard@levitte.org>,
  Zack Weinberg <zackw@panix.com>, Ludovic Brenta <lbrenta@debian.org>
 Homepage: http://monotone.ca/
 Vcs-Browser: http://viewmtn.angrygoats.net/branch/changes/net.venge.monotone
-Build-Depends: debhelper (>= 4.2.0), autotools-dev, libz-dev, po-debconf,
+Build-Depends: debhelper (>= 4.2.0), autotools-dev, po-debconf, patch,
  libboost-dev (>= 1.34.1-2) | libboost1.35-dev | libboost1.37-dev,
- libpcre3-dev (>= 7.6), patch
+ libz-dev, libbotan1.8-dev, libsqlite3-dev, libpcre3-dev, libidn11-dev,
+ liblua5.1-0-dev, libpcre3-dev (>= 7.4)
 Build-Depends-Indep: ps2eps, texlive-base, texlive-generic-recommended,
  texlive-latex-base, texinfo, xpdf-utils
 Standards-Version: 3.8.1
