--- a/control
+++ b/control
@@ -10,8 +10,8 @@ Build-Depends: debhelper (>= 4.2.0), autotools-dev, po-debconf, patch,
  libboost-dev (>= 1.34.1-2) | libboost1.35-dev | libboost1.37-dev,
  libz-dev, libbotan1.8-dev, libsqlite3-dev, libpcre3-dev, libidn11-dev,
  liblua5.1-0-dev, libpcre3-dev (>= 7.4)
-Build-Depends-Indep: ps2eps, texlive-base, texlive-generic-recommended,
- texlive-latex-base, texinfo, xpdf-utils
+Build-Depends-Indep: texinfo, xpdf-utils, ps2eps, texlive-generic-recommended,
+ texlive-latex-base
 Standards-Version: 3.8.1
 
 Package: monotone
