Changes for squeeze only:  - debhelper compat level 7; change build dep on debhelper accordingly  - dh_prep instead of dh_clean -k  - section for all-but-monotone-doc is now 'vcs'  - drop unnecessary versioning of libpcre3-dev build dep also:  - fix reactivation of hyphenation in mtn.1

--- a/rules
+++ b/rules
@@ -139,7 +139,7 @@ clean:
 binary-indep: build-indep
 	dh_testdir
 	dh_testroot
-	dh_clean -k
+	dh_prep
 
 	dh_installdirs -i
 	cd debian/monotone-doc/usr/share/doc && \
@@ -177,7 +177,7 @@ binary-indep: build-indep
 binary-arch: build-arch
 	dh_testdir
 	dh_testroot
-	dh_clean -k
+	dh_prep
 	dh_installdirs -a
 
 # again because we don't want the documentation in *-arch, we can't
@@ -195,7 +195,8 @@ binary-arch: build-arch
 	cp contrib/monotone.bash_completion \
 	   debian/monotone/etc/bash_completion.d/monotone
 
-	dh_installchangelogs -a
+# upstream file "ChangeLog" is not actually a change log
+	dh_installchangelogs -a -X ChangeLog
 	dh_installdocs -a
 	dh_installexamples -a
 	dh_installman -a
