--- a/control
+++ b/control
@@ -6,7 +6,7 @@ Uploaders: Richard Levitte <richard@levitte.org>,
  Zack Weinberg <zackw@panix.com>, Ludovic Brenta <lbrenta@debian.org>
 Homepage: http://monotone.ca/
 Vcs-Browser: http://viewmtn.angrygoats.net/branch/changes/net.venge.monotone
-Build-Depends: debhelper (>= 7), autotools-dev, po-debconf, patch,
+Build-Depends: debhelper (>= 7), autotools-dev, po-debconf, quilt, patch,
  libboost-dev (>= 1.34.1-2) | libboost1.35-dev | libboost1.37-dev,
  libz-dev, libbotan1.8-dev, libsqlite3-dev, libpcre3-dev, libidn11-dev,
  liblua5.1-0-dev, libpcre3-dev
