--- a/rules
+++ b/rules
@@ -26,6 +26,8 @@
 build: build-arch
 binary: binary-indep binary-arch
 
+# patching
+include /usr/share/quilt/quilt.make
 
 # DEB_BUILD_OPTIONS handling
 
@@ -53,6 +55,7 @@ export DH_VERBOSE = 1
 
 config.status: configure
 	dh_testdir
+	$(MAKE) -f debian/rules patch
 	[ -f config.sub.upstream ] || mv config.sub config.sub.upstream
 	[ -f config.guess.upstream ] || mv config.guess config.guess.upstream
 	cp -f /usr/share/misc/config.sub config.sub
@@ -78,6 +81,7 @@ clean:
 	dh_clean
 	[ ! -f config.sub.upstream ] || mv -f config.sub.upstream config.sub
 	[ ! -f config.guess.upstream ] || mv -f config.guess.upstream config.guess
+	$(MAKE) -f debian/rules unpatch
 
 
 # Architecture-dependent binary packages.
