Add a hack to the fatal signal handlers to invoke gdb and get a full stack trace on crash.  This won't fix anything, but by activating this mode in the testsuite, we can get more detail on the alpha and sparc FTBFSes.

--- a/rules
+++ b/rules
@@ -50,6 +50,10 @@ PAR := $(patsubst parallel=%,-j%,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
 export DISABLE_NETWORK_TESTS = 1
 export DH_VERBOSE = 1
 
+# This is a hack to get more detail out of the alpha and sparc testsuite
+# crashes.
+export MTN_STACKTRACE_ON_CRASH = 1
+
 
 # Building
 
