--- a/control
+++ b/control
@@ -7,9 +7,8 @@ Uploaders: Richard Levitte <richard@levitte.org>,
 Homepage: http://monotone.ca/
 Vcs-Browser: http://viewmtn.angrygoats.net/branch/changes/net.venge.monotone
 Build-Depends: debhelper (>= 7), autotools-dev, po-debconf, quilt, patch,
- libboost-dev (>= 1.34.1-2) | libboost1.35-dev | libboost1.37-dev | libboost1.38-dev, 
- libz-dev, libbotan1.8-dev, libsqlite3-dev, libpcre3-dev, libidn11-dev,
- liblua5.1-0-dev, libpcre3-dev
+ libboost-dev, libbotan1.8-dev, libidn11-dev, liblua5.1-0-dev, libpcre3-dev,
+ libsqlite3-dev, libz-dev
 Build-Depends-Indep: texinfo, xpdf-utils, ps2eps, texlive-generic-recommended,
  texlive-latex-base
 Standards-Version: 3.8.1
