--- a/control
+++ b/control
@@ -6,7 +6,7 @@ Uploaders: Richard Levitte <richard@levitte.org>,
  Zack Weinberg <zackw@panix.com>, Ludovic Brenta <lbrenta@debian.org>,
  Francis Russell <francis@unchartedbackwaters.co.uk>
 Homepage: http://monotone.ca/
-Vcs-Browser: http://viewmtn.angrygoats.net/branch/changes/net.venge.monotone
+Vcs-Browser: http://code.monotone.ca/p/monotone/source/tree/h:net.venge.monotone/
 Build-Depends: debhelper (>= 7), autotools-dev, po-debconf, quilt, patch,
  libboost-dev, libbotan1.8-dev, libidn11-dev, liblua5.1-0-dev, libpcre3-dev,
  libsqlite3-dev, libz-dev, texinfo
@@ -43,7 +43,8 @@ Description: A distributed version (revision) control system - server scripts
 Package: monotone-doc
 Section: doc
 Architecture: all
-Depends: monotone (>= ${source:Version}), ${misc:Depends}
+Depends: ${misc:Depends}
+Suggests: monotone
 Description: A distributed version (revision) control system - documentation
  Monotone is a free, distributed version control system. It provides
  fully disconnected operation, manages complete tree versions, keeps
