Because of Debian policy (quoted below) and the fact that we make /usr/shar/doc/monotone-doc a symlink of /usr/share/doc/monotone, we must make monotone-doc depend on monotone.
From http://www.debian.org/doc/debian-policy/ch-docs.html#s12.3 :
"/usr/share/doc/package may be a symbolic link to another directory in /usr/share/doc only if the two packages both come from the same source and the first package Depends on the second."

--- a/control
+++ b/control
@@ -43,8 +43,7 @@ Description: A distributed version (revision) control system - server scripts
 Package: monotone-doc
 Section: doc
 Architecture: all
-Depends: ${misc:Depends}
-Suggests: monotone
+Depends: monotone (>= ${source:Version}), ${misc:Depends}
 Description: A distributed version (revision) control system - documentation
  Monotone is a free, distributed version control system. It provides
  fully disconnected operation, manages complete tree versions, keeps
