* rules: Rewritten to use dh. * NEWS: Document that there's the package monotone-extras. * changelog: Document the changes. * control: New B-D for the tests of extras.  Because of the bash   completion part, the package 'monotone' also depends on bash 4 or   newer.  Add package information for 'monotone-extras'.  Have the   package 'monotone-server' depend on 'monotone-extras'. * patches/90-stacktrace-on-crash.diff: Adapt to the changes in monotone   1.0. * source/format: Move to the 3.0 (quilt) format.
* monotone.bash-completion: New file to specify the bash completion file
  to install.  It depends on bash >= 4.0.
* monotone.docs: Remove 'README.changesets' as it doesn't exist any
  more.
* monotone.examples: Mentioning the directory is enough.
* monotone-doc.dirs: Not needed any more.
* monotone-doc.docs: monotone.pdf now exists in the doc/ subdirectory.
  dh_installdocs can handle directories, so add doc/html as well.
* monotone-doc.info: The info files have moved to the doc/ subdirectory.
* monotone-extras.install: New file, installs files that are part of the
  package 'monotone-extras'.
* monotone-server.dirs: Remove usr/share/monotone/hooks, it's part of the
  package 'monotone-extras'.
* monotone-server.install: Add base files in /usr/share/monotone.
* monotone-server.postinst: Adapt to the new files that come with
  monotone 1.0.

--- a/control
+++ b/control
@@ -9,15 +9,17 @@ Homepage: http://monotone.ca/
 Vcs-Browser: http://code.monotone.ca/p/monotone/source/tree/h:net.venge.monotone/
 Build-Depends: debhelper (>= 7), autotools-dev, po-debconf, quilt, patch,
  libboost-dev, libbotan1.8-dev, libidn11-dev, liblua5.1-0-dev, libpcre3-dev,
- libsqlite3-dev, libz-dev, texinfo
+ libsqlite3-dev, libz-dev, texinfo,
+ expect, bash-completion, bash (>= 4.0), highlight-source, mime-construct
 Build-Depends-Indep: poppler-utils | xpdf-utils, ps2eps,
  texlive-generic-recommended, texlive-latex-base
 Standards-Version: 3.9.1
 
 Package: monotone
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}, bash (>= 4.0)
 Suggests: monotone-doc, monotone-server
+Recommends: monotone-extras
 Description: A distributed version (revision) control system
  Monotone is a free, distributed version control system. It provides
  fully disconnected operation, manages complete tree versions, keeps
@@ -26,9 +28,31 @@ Description: A distributed version (revision) control system
  network protocol, performs history-sensitive merging, and delegates
  trust functions to client-side RSA certificates.
 
+Package: monotone-extras
+Architecture: all
+Depends: monotone (>= ${source:Version})
+Suggests: mime-construct, highlight-source, perl
+Description: A distributed version (revision) control system - extras
+ Monotone is a free, distributed version control system. It provides
+ fully disconnected operation, manages complete tree versions, keeps
+ its state in a local transactional database, supports overlapping
+ branches and extensible metadata, uses an efficient peer-to-peer
+ network protocol, performs history-sensitive merging, and delegates
+ trust functions to client-side RSA certificates.
+ .
+ This package contains scripts, monotone hooks and more:
+ .
+ * mtn-cleanup
+   (please install perl to use this)
+ * monotone-mail-notify.lua + monotone-mail-notify
+   (please install mime-construct and highlight-source to use this)
+ * get_passphrase_from_file.lua
+ * authorize_remote_automate.lua
+
 Package: monotone-server
 Architecture: all
-Depends: monotone (>= ${source:Version}), adduser, ucf (>= 0.28), 
+Depends: monotone (>= ${source:Version}), 
+ monotone-extras (>= ${source:Version}), adduser, ucf (>= 0.28), 
  lsb-base (>= 3.0-6), ${misc:Depends}
 Description: A distributed version (revision) control system - server scripts
  Monotone is a free, distributed version control system. It provides
