* control: Because the package 'monotone' includes perl and python files   (in the /usr/share/doc/monotone/contrib directory), let's depend on   ${perl:Depends} and ${python:Depends} as well.

--- a/control
+++ b/control
@@ -17,7 +17,8 @@ Standards-Version: 3.9.1
 
 Package: monotone
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, bash (>= 4.0)
+Depends: ${shlibs:Depends}, ${misc:Depends}, ${perl:Depends}, 
+ ${python:Depends},bash (>= 4.0)
 Suggests: monotone-doc, monotone-server
 Recommends: monotone-extras
 Description: A distributed version (revision) control system
