A review of previous changes showed that there were a couple of issues to deal with, hereby done.
* control: Depending on ${perl:Depends} and ${python:Depends} is vertiges
  from an earlier experiment, and irrelevant now.  Throw away.
* rules, monotone-doc.doc-base: Don't compress .pdf files.

--- a/rules
+++ b/rules
@@ -89,8 +89,9 @@ override_dh_installchangelogs:
 	dh_installchangelogs -X ChangeLog
 
 # colorize seems to compress to something weird, Lintian keeps warning about it
+# PDFs should generally not be compressed.
 override_dh_compress:
-	dh_compress -Xcolorize
+	dh_compress -Xcolorize -X.pdf
 
 # The upstream makefiles' install targets do nothing useful for these
 # packages.  (In particular, we do not want the monolithic
